build: bump intellij platform plugin to 2.16.0, add --enable-native-access to tests, update docs